<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mode_inverse"
    tools:context=".EditProfileActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/mode_inverse">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/editprofile_animationView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            app:lottie_autoPlay="true"
            app:lottie_fileName="registration.json"
            app:lottie_loop="true" />

        <TextView
            android:id="@+id/textView_editprofile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editprofile_animationView"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/acme"
            android:text="@string/edit_profile"
            android:textColor="@color/mode"
            android:textSize="25sp"
            android:textStyle="bold" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/register_profile_image"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_120sdp"
            android:layout_below="@+id/textView_editprofile"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            app:cardCornerRadius="@dimen/_10sdp">

            <ImageView
                android:id="@+id/update_profile_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/user" />

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/remove_profile_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/register_profile_image"
            android:layout_centerHorizontal="true"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="Remove Profile Picture"
            android:textColor="@color/main_color"
            android:textSize="@dimen/_10sdp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/optional_profile_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_below="@+id/remove_profile_picture"
            android:layout_centerHorizontal="true"
            android:text="@string/optional_profile_photo" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textview_name_signup"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/optional_profile_photo"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/enter_name"
            app:endIconMode="clear_text"
            app:endIconTint="@color/mode"
            app:helperText="@string/required_values"
            app:helperTextTextColor="@color/red">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edittext_name_editprofile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName|textCapWords"
                android:maxLength="30" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textview_dateofbirth_editprofile"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textview_name_signup"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/select_date_of_birth"
            app:endIconDrawable="@drawable/round_calendar_month"
            app:endIconMode="custom"
            app:endIconTint="@color/mode"
            app:helperText="Required*"
            app:helperTextTextColor="@color/red">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edittext_dateofbirth_editprofile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:inputType="date" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textview_email_editprofile"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/radio_group_editprofile_gender"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/enter_email_optional"
            app:endIconMode="clear_text"
            app:endIconTint="@color/mode">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edittext_email_editprofile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxLength="30"
                android:textColor="@color/mode"
                android:alpha="0.7"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/imageView_verified_email"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_40sdp"
            android:src="@drawable/email_verfied"
            android:layout_above="@+id/remove_email"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/_32sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:visibility="invisible"
            android:alpha="0.8"
            />

        <TextView
            android:id="@+id/change_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textview_email_editprofile"
            android:layout_alignParentStart="true"
            android:layout_marginStart="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="Change Email"
            android:textColor="@color/main_color"
            android:textSize="@dimen/_10sdp"
            android:textStyle="bold"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            />

        <TextView
            android:id="@+id/remove_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textview_email_editprofile"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_25sdp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="Remove Email"
            android:textColor="@color/main_color"
            android:textSize="@dimen/_10sdp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textview_dateofbirth_editprofile"
            android:layout_marginStart="30dp"
            android:text="@string/gender"
            android:textColor="@color/mode"
            android:textSize="15sp" />

        <RadioGroup
            android:id="@+id/radio_group_editprofile_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView_gender"
            android:layout_marginStart="20dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginBottom="10dp"
                android:text="@string/female"
                android:textColor="@color/mode"
                android:textSize="15sp" />

            <RadioButton
                android:id="@+id/radio_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginBottom="10dp"
                android:text="@string/male"
                android:textColor="@color/mode"
                android:textSize="15sp" />

        </RadioGroup>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/change_email">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/button_update_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="100dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="100dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/update_profile" />

                <Button
                    android:id="@+id/button_delete_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/progressBar"
                    android:layout_marginStart="100dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="100dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/delete_profile"
                    android:theme="@style/Theme.AgriGroww.button_red" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_below="@+id/button_update_profile"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:theme="@style/CircularProgress"
                    android:visibility="gone" />
            </RelativeLayout>
        </FrameLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_back_button"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_margin="@dimen/_20sdp"
            app:cardCornerRadius="@dimen/_20sdp"
            >

            <ImageButton
                android:id="@+id/back_button"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@color/extra_background"
                app:tint="@color/mode"
                android:layout_toEndOf="@+id/textview_scroll_animation"
                android:src="@drawable/ic_arrow_back_black_24dp"
                android:layout_centerVertical="true"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                />
        </androidx.cardview.widget.CardView>

    </RelativeLayout>


</ScrollView>