<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mode_inverse"
    tools:context=".EmailVerificationActivity">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/emai_otp_animationView"
        android:layout_width="250dp"
        android:layout_height="250dp"
        app:lottie_fileName="email_verify.json"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/skip_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_margin="@dimen/_20sdp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:text="Skip for now"
        android:textColor="@color/main_color"
        android:textSize="@dimen/_10sdp"
        android:visibility="gone"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_back_button"
        android:layout_width="@dimen/_35sdp"
        android:layout_height="@dimen/_35sdp"
        android:layout_margin="@dimen/_20sdp"
        app:cardCornerRadius="@dimen/_20sdp"
        android:visibility="gone"
        >

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:background="@color/extra_background"
            app:tint="@color/mode"
            android:layout_toEndOf="@+id/textview_scroll_animation"
            android:src="@drawable/ic_arrow_back_black_24dp"
            android:layout_centerVertical="true"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView_email_otp_verify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Please provide us your email"
        android:layout_below="@+id/emai_otp_animationView"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/_18sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:textAlignment="center"
        android:fontFamily="@font/acme"
        android:textStyle="bold"
        android:textColor="@color/mode"
        android:layout_marginTop="@dimen/_minus20sdp"
        />
    <TextView
        android:id="@+id/textView_email_otp_Sent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_email_otp_verify"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/_12sdp"
        android:fontFamily="@font/acme"
        android:layout_marginTop="@dimen/_5sdp"
        android:visibility="gone"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textview_email_signup"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:hint="Enter Your Email"
        app:hintAnimationEnabled="true"
        app:endIconTint="@color/mode"
        app:endIconMode="clear_text"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/textView_email_otp_Sent"
        app:helperText="@string/required_values"
        app:helperTextTextColor="@color/red"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edittext_email_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:maxLength="30"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textview_email_otp_signup"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:hint="Enter OTP"
        app:hintAnimationEnabled="true"
        app:endIconTint="@color/mode"
        app:endIconMode="clear_text"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/textview_email_signup"
        app:helperText="@string/required_values"
        app:helperTextTextColor="@color/red"
        android:visibility="gone"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edittext_email_otp_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapCharacters"
            android:maxLength="6"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/resend_otp_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_below="@+id/textview_email_otp_signup">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/didn_t_receive_otp"
            android:textSize="14sp"/>
        <TextView
            android:id="@+id/textresendotp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/resend_otp"
            android:textColor="@color/main_color"/>


    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/resend_otp_layout">

        <Button
            android:id="@+id/button_continue_otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="100dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="20dp"
            android:text="@string/continue_btn"

            />

        <Button
            android:id="@+id/button_verify_otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="100dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="20dp"
            android:text="@string/verify"
            android:visibility="invisible"

            />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:visibility="gone"
            android:theme="@style/CircularProgress"
            />
    </FrameLayout>

</RelativeLayout>